# SpecValidator

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  WORK_DIVISION_PLAN.md  pyproject.toml  start.sh
.specify/: json-schema.json  model-config.md  project-spec.md  workflow.md
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
backend/: cli.py  download_model.py  inference.py  main.py  openapi.yaml  parser.py  requirements.txt  validator.py
frontend/: package-lock.json  package.json
frontend/public/: index  index.html
frontend/src/: App.js
grammars/: endpoint.gbnf
